--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,43 @@
+annotated-types==0.6.0
+blis==0.7.11
+catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
-click==8.1.7
+click==7.1.2
+cloudpathlib==0.16.0
+confection==0.1.4
 contourpy==1.2.0
 cycler==0.12.1
+cymem==2.0.8
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz#sha256=0673b3ce4a28a19e99dc0fc3f8f7fe67b936c41749e6b70f778ec5f9f78f3a66
 filelock==3.13.1
 fonttools==4.49.0
 fsspec==2024.2.0
 huggingface-hub==0.20.3
 idna==3.6
+install==1.3.5
 Jinja2==3.1.3
 joblib==1.3.2
 kiwisolver==1.4.5
+langcodes==3.3.0
 MarkupSafe==2.1.5
 matplotlib==3.8.3
 mpmath==1.3.0
+murmurhash==1.0.10
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.4
 packaging==23.2
+pandas==2.2.1
+pathlib_abc==0.1.1
+pathy==0.11.0
 pillow==10.2.0
+preshed==3.0.9
+pydantic==1.8.2
+pydantic_core==2.16.3
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2024.1
 PyYAML==6.0.1
 regex==2023.12.25
 requests==2.31.0
@@ -28,7 +45,13 @@ safetensors==0.4.2
 scikit-learn==1.4.1.post1
 scipy==1.12.0
 six==1.16.0
+smart-open==6.4.0
+spacy==3.0.9
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 sympy==1.12
+thinc==8.0.17
 threadpoolctl==3.3.0
 tokenizers==0.15.2
 torch==2.2.0
@@ -36,5 +59,9 @@ torchaudio==2.2.0
 torchvision==0.17.0
 tqdm==4.66.2
 transformers==4.37.2
+typer==0.3.2
 typing_extensions==4.9.0
+tzdata==2024.1
 urllib3==2.2.1
+wasabi==0.10.1
+weasel==0.3.4
